[gd_scene load_steps=5 format=3 uid="uid://cu0btgjhkybh4"]

[ext_resource type="Script" uid="uid://btcc882hb66wu" path="res://Menus/Scripts/start_screen.gd" id="1_ainjc"]
[ext_resource type="AudioStream" uid="uid://dbjs4k7sida2g" path="res://Music/Coiled and ready to Rattle - Title Screen.mp3" id="2_ainjc"]
[ext_resource type="Texture2D" uid="uid://bk6gm45ayu28p" path="res://Sprites/Snake2_title.png" id="2_qal85"]
[ext_resource type="PackedScene" uid="uid://pfapqlxpc8uv" path="res://Menus/Scenes/credits.tscn" id="4_voejr"]

[node name="start_screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ainjc")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/TitleLabel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_right = 500.0
offset_bottom = 500.0
grow_vertical = 2
texture = ExtResource("2_qal85")
stretch_mode = 4

[node name="Spacer1" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "PLAY"

[node name="Credits" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Quit"

[node name="Title_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ainjc")
volume_db = -5.0
autoplay = true

[node name="Credits" parent="." instance=ExtResource("4_voejr")]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
